<?xml version="1.0"?>
<package format="3">
  <name>boundary_handler</name>
  <version>0.0.1</version>
  <description>Boundary Graph Extractor</description>
  <maintainer email="fanyang2@alumni.cmu.edu">Fan Yang</maintainer>
  <license>BSD</license>

  <!-- Build tool and test dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for building the package -->
  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>visibility_graph_msg</depend>
  
  <!-- The below dependencies are system dependencies and may need to be reflected in the CMake as well. -->
  <depend>PCL</depend>
  <depend>OpenCV</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
