<?xml version="1.0"?>
<package format="3">
  <name>graph_decoder</name>
  <version>0.0.1</version>
  <description>Visibility Graph Decoder</description>
  <maintainer email="fanyang2@alumni.cmu.edu">Fan Yang</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for building the package -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>visibility_graph_msg</depend>
  <depend>pcl_conversions</depend>
  <depend>PCL</depend>

  <!-- Optional: Test dependencies -->
  <!-- <test_depend>ament_lint_auto</test_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>