<?xml version="1.0"?>
<package format="3">
  <name>teleop_rviz_plugin</name>
  <version>0.0.1</version>
  <description>Teleop RVIZ Plugin</description>
  <maintainer email="zhangji@cmu.edu">Ji Zhang</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>qtbase5-dev</depend>
  <depend>rviz2</depend>
  <depend>rviz_common</depend>
  <depend>Qt5</depend>

  <build_depend>libqt5-core</build_depend>
  <build_depend>libqt5-gui</build_depend>
  <build_depend>libqt5-widgets</build_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
